updates to content and navigation

--- a/how.html
+++ b/how.html
@@ -56,19 +56,19 @@
                         <i class="material-icons md-dark pmd-sm quad-action-link0">home</i>
                     </a>
                 </span>
-            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="echo devotion">
+            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="Devotions">
                     <a class="nav-links" href="devotions.html">
                         <i class="material-icons md-dark pmd-sm quad-action-fore1">book</i>
                     </a>
                 </span>
-            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="Quads">
-                    <a class="nav-links" href="quads.html">
-                        <i class="material-icons md-dark pmd-sm quad-action-fore2">border_all</i>
+            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="Why">
+                    <a class="nav-links" href="why.html">
+                        <i class="material-icons md-dark pmd-sm quad-action-fore4">visibility</i>
                     </a>
                 </span>
-            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="Quads Vision">
-                    <a class="nav-links" href="vision.html">
-                        <i class="material-icons md-dark pmd-sm quad-action-fore4">visibility</i>
+            <span class="navbar-brand" style="padding-left: 10px !important; padding-right: 10px !important;" title="How">
+                    <a class="nav-links" href="how.html">
+                        <i class="material-icons md-dark pmd-sm quad-action-fore2">border_all</i>
                     </a>
                 </span>
         </div>
@@ -78,43 +78,29 @@
     <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
         <div class="row center-block" id="pageView">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h1 class="quad-action-fore2">
-                    Small Groups - Quads
-                </h1>
+                <h1 class="quad-action-fore2">How</h1>
+                <h3><b>Step One:</b></h3>
+                <div>Read today’s schedule scripture passage and let <b>one verse find you</b>. The verse that reveals itself to your life, that verse that draws you in, challenges you, speaks directly to you.  Write that verse down.</div>
+                <h3 style="margin-top: 0;"><b>Scripture</b></h3>
+
+                <h3><b>Step Two:</b></h3>
+                <div>Then take some time to think about that one verse. Think how it applied when it was written. Now think how it applies to you. What’s the Holy Spirit saying to you?</div>
+                <h3 style="margin-top: 0;"><b>Observation</b></h3>
+
+                <h3><b>Step Three:</b></h3>
+                <div>Reflect, ponder, consider, think about it, quiet your mind, and then write down your thoughts on how this insight applies to you.</div>
+                <h3 style="margin-top: 0;"><b>Application</b></h3>
+
+                <h3><b>Step Four:</b></h3>
+                <div>Respond to step 2 and 3 with authentic communication, write down your your prayer or your point of thanksgiving.</div>
+                <h3 style="margin-top: 0;"><b>Prayer</b></h3>
             </div>
         </div>
-        <div class="row center-block">
-            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                <ul>
-                    <li>
-                        <h3>
-                            Meet, share + connect with people of like heart + desire. QUADs function as
-                            small groups of four, guys with guys and gals with gals, pursuing discipleship.
-                        </h3>
-                    </li>
-                    <li>
-                        <h3>
-                            These groups provide a safe, yet challenging, format for those who wish to
-                            follow Christ with passion + purpose.
-                        </h3>
-                    </li>
-                    <li>
-                        <h3>
-                            QUADs meet on a weekly basis + each QUAD looks into God’s word for personal wisdom, insight + encouragement.
-                        </h3>
-                    </li>
-                    <li>
-                        <h3>
-                            QUADs use the this devotional tool, so feel free to bring this App and or a Bible + a journal.
-                        </h3>
-                    </li>
-                    <li>
-                        <h3>
-                            Get connected to a QUAD + be a disciple, making disciples [BE ONE/MAKE ONE].  New QUADs are forming now.
-                        </h3>
-                    </li>
-                </ul>
-            </div>
+    </div>
+
+    <div style="position: fixed; bottom: 0; width: 100%; margin: 20px;">
+        <div class="pmd-sm small text-muted">
+            &copy; 2017-2024 The Springs. All Rights Reserved. v2023.12.01.
         </div>
     </div>
 
