Typo's and Copyright fix

--- a/devotions.html
+++ b/devotions.html
@@ -112,7 +112,7 @@
     -->
 
     <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 The Springs. All Rights Reserved. v2023.12.01.
+        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
     </div>
 
 </body>
