--- a/why.html
+++ b/why.html
@@ -73,7 +73,7 @@
                 <h1 class="quad-action-fore4">Why<small class="text-muted"></small></h1>
                 <h3><b>Reading is Listening</b></h3>
                 <div><i>What is the Holy Spirit saying to me today?</i></div>
-                <div>Since we are living by the Spirit, let us fall of the Spirits' leading in very part of our lives.</div>
+                <div>Since we are living by the Spirit, let us follow the Spirit's leading in very part of our lives.</div>
                 <div><b><a href="https://www.biblegateway.com/passage/?search=galations+5%3A25&version=ESV" target="_blank">Gal. 5:25</a></b></div>
 
                 <h3><b>Enhance the Relationship + Confidence</b></h3>
@@ -95,7 +95,7 @@
     </div>
 
     <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 The Springs. All Rights Reserved. v2023.12.01.
+        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
     </div>
 
 </body>
