--- a/how.html
+++ b/how.html
@@ -92,14 +92,14 @@
                 <h3 style="margin-top: 0;"><b>Application</b></h3>
 
                 <h3><b>Step Four:</b></h3>
-                <div>Respond to step 2 and 3 with authentic communication, write down your your prayer or your point of thanksgiving.</div>
+                <div>Respond to step 2 and 3 with authentic communication, write down your prayer or a point of thanksgiving.</div>
                 <h3 style="margin-top: 0;"><b>Prayer</b></h3>
             </div>
         </div>
     </div>
 
     <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 The Springs. All Rights Reserved. v2023.12.01.
+        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
     </div>
 
 </body>
