--- a/how.html
+++ b/how.html
@@ -75,8 +75,8 @@
     </div>
 
     <!--This is where the other templates get inserted-->
-    <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
-        <div class="row center-block" id="pageView">
+    <div class="container-fluid" style="padding-left: 0; padding-right: 0;" id="pageView">
+        <div class="row center-block">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h1 class="quad-action-fore2">How</h1>
                 <h3><b>Step One:</b></h3>
@@ -96,11 +96,11 @@
                 <h3 style="margin-top: 0;"><b>Prayer</b></h3>
             </div>
         </div>
+        <div class="quad-footer pmd-sm small text-muted" v-html="copyright"></div>
     </div>
 
-    <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
-    </div>
+    <!-- <script src="public/js/devotions.js" type="text/javascript"></script> -->
+    <script src="public/js/devotions.min.js" type="text/javascript"></script>
 
 </body>
 </html>
