--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     </div>
 
     <!--This is where the other templates get inserted-->
-    <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
-        <div class="row center-block" id="pageView">
+    <div class="container-fluid" style="padding-left: 0; padding-right: 0;" id="pageView">
+        <div class="row center-block">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="list-group pmd-card-list pmd-z-depth-1">
 
@@ -122,17 +122,16 @@
                             <i class="material-icons md-dark pmd-sm quad-action-link2">border_all</i>
                             How
                         </h3>
-                        <!-- <p class="list-group-item-text">4 Steps to Personal QT</p>-->
                         <p class="list-group-item-text">Personal QT Steps</p>
                     </a>
                 </div>
             </div>
         </div>
+        <div class="quad-footer pmd-sm small text-muted" v-html="copyright"></div>
     </div>
 
-    <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
-    </div>
+    <!-- <script src="public/js/devotions.js" type="text/javascript"></script> -->
+    <script src="public/js/devotions.min.js" type="text/javascript"></script>
 
 </body>
 </html>
