--- a/why.html
+++ b/why.html
@@ -67,8 +67,8 @@
     </div>
 
     <!--This is where the other templates get inserted-->
-    <div class="container-fluid" style="padding-left: 0; padding-right: 0;">
-        <div class="row center-block" id="pageView">
+    <div class="container-fluid" style="padding-left: 0; padding-right: 0;" id="pageView">
+        <div class="row center-block">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h1 class="quad-action-fore4">Why<small class="text-muted"></small></h1>
                 <h3><b>Reading is Listening</b></h3>
@@ -92,11 +92,11 @@
                 <div>When other areas of life get in the way, continually respond by making a decision to be devoted to a lifestyle of sitting at His feet.</div>
             </div>
         </div>
+        <div class="quad-footer pmd-sm small text-muted" v-html="copyright"></div>
     </div>
 
-    <div class="quad-footer pmd-sm small text-muted">
-        &copy; 2017-2024 Hope for the Heart. All Rights Reserved. v2023.12.02.
-    </div>
+    <!-- <script src="public/js/devotions.js" type="text/javascript"></script> -->
+    <script src="public/js/devotions.min.js" type="text/javascript"></script>
 
 </body>
 </html>
